logs/dag_id=dag_with_postgres_operator_v02/run_id=scheduled__2024-03-25T00:00:00+00:00/task_id=insert_postgres_table/attempt=5.log
[2024-03-28T02:28:56.782+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v02.insert_postgres_table scheduled__2024-03-25T00:00:00+00:00 [queued]>
[2024-03-28T02:28:56.787+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v02.insert_postgres_table scheduled__2024-03-25T00:00:00+00:00 [queued]>
[2024-03-28T02:28:56.788+0000] {taskinstance.py:2193} INFO - Starting attempt 5 of 10
[2024-03-28T02:28:56.796+0000] {taskinstance.py:2217} INFO - Executing <Task(PostgresOperator): insert_postgres_table> on 2024-03-25 00:00:00+00:00
[2024-03-28T02:28:56.800+0000] {standard_task_runner.py:60} INFO - Started process 1982 to run task
[2024-03-28T02:28:56.803+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v02', 'insert_postgres_table', 'scheduled__2024-03-25T00:00:00+00:00', '--job-id', '201', '--raw', '--subdir', 'DAGS_FOLDER/docker_with_postgres.py', '--cfg-path', '/tmp/tmphjzolu3r']
[2024-03-28T02:28:56.805+0000] {standard_task_runner.py:88} INFO - Job 201: Subtask insert_postgres_table
[2024-03-28T02:28:56.840+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_with_postgres_operator_v02.insert_postgres_table scheduled__2024-03-25T00:00:00+00:00 [running]> on host 6ba63bfba168
[2024-03-28T02:28:56.887+0000] {taskinstance.py:2513} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='ethan_wu' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v02' AIRFLOW_CTX_TASK_ID='insert_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2024-03-25T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='5' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-03-25T00:00:00+00:00'
[2024-03-28T02:28:56.888+0000] {sql.py:276} INFO - Executing: 
            insert into dag_runs
             (dt, dag_id)
               with values (
            '2024-03-25', 'dag_with_postgres_operator_v02'
            )
            
[2024-03-28T02:28:56.893+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-28T02:28:56.900+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-28T02:28:56.907+0000] {sql.py:457} INFO - Running statement: 
            insert into dag_runs
             (dt, dag_id)
               with values (
            '2024-03-25', 'dag_with_postgres_operator_v02'
            )
            , parameters: None
[2024-03-28T02:28:56.908+0000] {taskinstance.py:2731} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "'2024-03-25'"
LINE 5:             '2024-03-25', 'dag_with_postgres_operator_v02'
                    ^

[2024-03-28T02:28:56.914+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v02, task_id=insert_postgres_table, execution_date=20240325T000000, start_date=20240328T022856, end_date=20240328T022856
[2024-03-28T02:28:56.921+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 201 for task insert_postgres_table (syntax error at or near "'2024-03-25'"
LINE 5:             '2024-03-25', 'dag_with_postgres_operator_v02'
                    ^
; 1982)
[2024-03-28T02:28:56.936+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-03-28T02:28:56.947+0000] {taskinstance.py:3312} INFO - 0 downstream tasks scheduled from follow-on schedule check
